--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# Code
+.vscode
+
 # IPython
 profile_default/
 ipython_config.py
@@ -137,3 +140,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Apple
+.DS_Store
